@@ -11,3 +11,4 @@
 		^	0, r9
 baz		#	4
 
+	END
